@@ -1010,17 +1010,20 @@ abstract class ContentBase
 			$contentops = ContentOperations::get_instance();
 			$error = $contentops->CheckAliasError($alias, $this->Id());
 			if( $error !== FALSE ) {
-                // If a '-2' version of the alias already exists
-                // Check the '-3' version etc.
-                $prefix = $alias;
-                if( endswith($prefix,'-') ) $prefix = substr($prefix,0,strlen($prefix)-1);
-                $test = null;
-                for( $alias_num = 2; $alias_num < 100; $alias_num++ ) {
-                    $test = $prefix.'-'.$alias_num;
-                    if( ($tmp = $contentops->CheckAliasError($test)) === FALSE ) break;
+                $alias = munge_string_to_url($alias);
+                $error = $contentops->CheckAliasError($alias, $this->Id());
+                if( $error !== FALSE ) {
+                    // If a '-2' version of the alias already exists, Check the '-3' version etc.
+                    $prefix = $alias;
+                    if( endswith($prefix,'-') ) $prefix = substr($prefix,0,strlen($prefix)-1);
+                    $test = null;
+                    for( $alias_num = 2; $alias_num < 100; $alias_num++ ) {
+                        $test = $prefix.'-'.$alias_num;
+                        if( ($tmp = $contentops->CheckAliasError($test)) === FALSE ) break;
+                    }
+                    if( $alias_num >= 100 ) throw new \CmsContentException(lang('CMSEX'));
+                    $alias = $test;
                 }
-                if( $alias_num >= 100 ) throw new \CmsException('Could not find a valid alias');
-                $alias = $test;
             }
 		}
 
