@@ -37,7 +37,7 @@
 final class CMSContentManager extends CMSModule
 {
   function GetFriendlyName() { return $this->Lang('friendlyname'); }
-  function GetVersion() { return '1.1'; }
+  function GetVersion() { return '1.1.1'; }
   function GetHelp() { return CmsLangOperations::lang_from_realm('help','help_cmscontentmanager_help'); }
   function GetAuthor() { return 'calguy1000'; }
   function GetAuthorEmail() { return 'calguy1000@cmsmadesimple.org'; }
