@@ -9,6 +9,11 @@ Core - General
   - Fixes an issue in CmsLayoutTemplate when creating a template from a type.
   - Fixes an issue where a 404 handler error page would not be rendered correctly if for some reason the route did not specify a page id to load.
   - More fixes to cms_url class.
+  - Improve the way page aliases are munged when they are supplied.
+  - Improve the error generated when a page alias cannot be generated
+
+Content Manager
+  - Improve error handling in edit content.
 
 Design Manager
   - Fix problem with resetting a template back to factory defaults, or creating a new template from factory defaults.
